[package]
name = "ochako_rs"
version = "0.1.0"
authors = ["pyro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
rand = "0.8.3"

[dependencies.serenity]
version = "0.10.2"
features = ["framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
